resolve card dynamic

--- a/tarif.html
+++ b/tarif.html
@@ -213,7 +213,7 @@
 
 
 						<div class="w-full  col-12 col-lg-4 col-sm-6 md:w-1/2 lg:w-1/3 px-2 py-1">
-							<div class="ub ub1">
+							<div class="ub">
 								<div class="gprix">
 									<div class="truncate">
 										<span class="block font-bold truncate">
@@ -225,7 +225,7 @@
 							</div>
 						</div>
 						<div class="w-full  col-12 col-lg-4 col-sm-6 md:w-1/2 lg:w-1/3 px-2 py-1">
-							<div class="ub ub1">
+							<div class="ub">
 								<div class="gprix">
 									<div class="truncate">
 										<span class="block font-bold truncate">
@@ -237,7 +237,7 @@
 							</div>
 						</div>
 						<div class="w-full  col-12 col-lg-4 col-sm-6 md:w-1/2 lg:w-1/3 px-2 py-1">
-							<div class="ub ub1">
+							<div class="ub">
 								<div class="gprix">
 									<div class="truncate">
 										<span class="block font-bold truncate">
@@ -249,7 +249,7 @@
 							</div>
 						</div>
 						<div class="w-full  col-12 col-lg-4 col-sm-6 md:w-1/2 lg:w-1/3 px-2 py-1">
-							<div class="ub ub1">
+							<div class="ub">
 								<div class="gprix">
 									<div class="truncate">
 										<span class="block font-bold truncate">
