add link of differents pages

--- a/gare.html
+++ b/gare.html
@@ -133,8 +133,8 @@
 									</li>
 									<li class="active has_child"><a href="#">Nos gares</a></li>
 									<li><a href="tarif.html">Tarif</a></li>
-									<li><a href="#">Apropos</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="apropros.html">Apropos</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -161,10 +161,10 @@
 							<li class="active">
 								<a href="index.html" aria-haspopup="true" aria-expanded="false">Accueil</a>
 							</li>
-							<li><a href="#">Nos gares</a></li>
-							<li><a href="#">Tarif</a></li>
-							<li><a href="#">Apropos</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="gare.html">Nos gares</a></li>
+							<li><a href="tarif.html">Tarif</a></li>
+							<li><a href="apropros.html">Apropos</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 
