--- a/reserve.html
+++ b/reserve.html
@@ -166,10 +166,10 @@
 									<li class="active has_child">
 										<a href="index.html">Accueil</a>
 									</li>
-									<li><a href="#">Nos gares</a></li>
-									<li><a href="#">Tarif</a></li>
-									<li><a href="#">Apropos</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="gare.html">Nos gares</a></li>
+									<li><a href="tarif.html">Tarif</a></li>
+									<li><a href="tarif.html">Apropos</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
 						</div>
