--- a/apropros.html
+++ b/apropros.html
@@ -161,7 +161,7 @@
 							<li><a href="gare.html">Nos gares</a></li>
 							<li><a href="tarif.html">Tarif</a></li>
 							<li><a href="apropros.html">Apropos</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 
