--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									<li><a href="gare.html">Nos gares</a></li>
 									<li><a href="tarif.html">Tarif</a></li>
 									<li><a href="apropros.html">Apropos</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -158,10 +158,10 @@
 							<li class="active">
 								<a href="index.html" aria-haspopup="true" aria-expanded="false">Accueil</a>
 							</li>
-							<li><a href="#">Nos gares</a></li>
-							<li><a href="#">Tarif</a></li>
-							<li><a href="#">Apropos</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="gare.html">Nos gares</a></li>
+							<li><a href="tarif.html">Tarif</a></li>
+							<li><a href="apropros.html">Apropos</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 
