--- a/tarif.html
+++ b/tarif.html
@@ -134,7 +134,7 @@
 									<li><a href="gare.html">Nos gares</a></li>
 									<li class="active has_child"><a href="tarif.html">Tarif</a></li>
 									<li><a href="apropros.html">Apropos</a></li>
-									<li><a href="#">Contact</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -164,7 +164,7 @@
 							<li><a href="gare.html">Nos gares</a></li>
 							<li><a href="tarif.html">Tarif</a></li>
 							<li><a href="apropros.html">Apropos</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 
